--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "core-js": "^3.36.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.2",
     "prop-types": "^15.8.1",
