--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "vite build",
     "lint": "eslint \"src/**/*.js\"",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "test": "vitest"
   },
   "dependencies": {
     "@coreui/chartjs": "^4.0.0",
@@ -57,6 +58,7 @@
     "postcss": "^8.4.38",
     "prettier": "3.2.5",
     "sass": "^1.72.0",
-    "vite": "^5.2.6"
+    "vite": "^5.2.6",
+    "vitest": "^1.6.0"
   }
 }
